# maze

./: .dockerignore  .gitignore  .test.env  Dockerfile  README.md  alembic.ini  build.sh  docker-compose.yaml  plot_model.py  pyproject.toml  web.Dockerfile
.circleci/: config.yml
alembic/: env.py
alembic/versions/: 2025-02-02_013c78883701_init_database.py  2025-02-02_1fef3d6a53df_init_database.py  2025-02-02_2cf681b27c2d_init_database.py  2025-02-02_7e1a67f8a33e_init_database.py  2025-02-02_b130933626f9_init_database.py  2025-02-02_ddccc729fe05_change_train_losss_column_type.py  2025-02-02_ec2b989c8092_init_database.py  2025-02-10_4a68378342d1_init_database.py  2025-02-10_872a7085a1d6_init_database.py  2025-02-11_428b5c4426d6_init_database.py  2025-02-11_b7df9411b3d7_init_database.py  2025-02-13_04ed66d2419b_add_period_constraint.py  2025-02-15_e82429d99a75_add_indexes.py  2025-02-18_8df5131cc8b9_init_database.py  7b8b59843a02_init_database.py  9434360826ad_init_database.py
docker/maze-base/: Dockerfile
examples/king_of_mnist/: README.md  main.py
maze/: api_envision_00.py  handcraft_model0.py  handcraft_model_with_maxpool_upscale.py  main.py  random_model.py  random_model_main.py  run_model.py
maze/cli/: cli.py  clienvironment.py  environment.py  eval.py  main.py  run.py  test.py
maze/core/: config.py
maze/db/: base.py  session.py
maze/environment/: agent.py  agentdata.py  driver.py  environment.py  templates.py  torch_pipeline.py  vehicle.py  zone.py
maze/gene/: breeding.py  builder.py  dag.py  freq_table.py  huffman.py  merge.py  mutation.py  pipeline.py  symbols.py  utils.py
maze/models/: __init__.py  agent.py  avatar.py  environment.py  epoch.py  experiment.py  mutation.py  period.py  zone.py
maze/web/: app.py  dag.py  deps.py  filters.py
maze/web/static/vendors/dagre/: dagre-1.0.4.min.js  dagre-d3-0.5.0.min.js  graphlib-2.1.3.min.js
maze/web/templates/: layout.html  macros.html
maze/web/templates/agent/: view_agent.html
maze/web/templates/avatar/: view_avatar.html
maze/web/templates/environment/: view_environment.html
maze/web/templates/experiment/: view_experiment.html
maze/web/templates/home/: home.html
maze/web/templates/zone/: view_zone.html
maze/web/views/: agent.py  avatar.py  deployment.py  environment.py  experiment.py  home.py  zone.py
maze/web/views/experiment/: dag.py  routes.py
tests/gene/: test_builder.py  test_huffman.py  test_merge.py  test_symbols.py  test_utils.py
tests/integrations/: test_soaking.py
tests/unit/: test_dag.py
tests/unit/environment/: conftest.py  test_driver.py  test_torch_pipeline.py
tests/unit/gene/: test_breeding.py  test_builder.py  test_dag.py  test_freq_table.py  test_huffman.py  test_merge.py  test_mutation.py  test_symbols.py
