[tool.poetry]
name = "maze"
version = "0.1.0"
description = ""
authors = ["Fang-Pen Lin <hello@fangpenlin.com>"]
readme = "README.md"

[tool.poetry.scripts]
maze = "maze.main:cli"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.37"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"
beanqueue = "^1.1.6"
pydantic = "^2.10.6"
pytest-dotenv = "^0.5.2"
click = "^8.1.8"
rich = "^13.9.4"
jinja2 = "^3.1.5"

torch = { version = "==2.6.0+cu126", optional = true}
torchvision = { version = "==0.21.0+cu126", optional = true}

[tool.poetry.extras]
torch = ["torch", "torchvision"]

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
