[project]
name = "maze"
version = "0.1.0"
description = ""
authors = ["Fang-Pen Lin <hello@fangpenlin.com>"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "sqlalchemy >= 2.0.37, < 2.1.0",
   "fastapi >=0.115.8, <0.116",
   "uvicorn >=0.34.0, <0.35",
   "pydantic-settings>=2.7.1, <3.0.0",
   "alembic>=1.14.1, <2.0",
   "psycopg2-binary>=2.9.10, <2.10",
   "pydantic>=2.10.6, <2.11",
   "click>=8.1.8, <9.0",
   "rich>=13.9.4, <14.0",
   "jinja2>=3.1.5, <3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-dotenv>=0.5.2",
]

[project.scripts]
maze = "maze.main:cli"

[project.optional-dependencies]
torch-cpu = [
   "torch==2.6.0",
   "torchvision==2.6.0",
]
torch-gpu = [
   "torch==2.6.0+cu126",
   "torchvision==2.6.0+cu126",
]

[too.uv]
package = true
conflicts = [
    [
      { extra = "torch-cpu" },
      { extra = "torch-gpu" },
    ],
]

[tool.uv.sources]
torch = [
  { index = "torch-cpu", extra = "torch-cpu" },
  { index = "torch-gpu", extra = "torch-gpu" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

